# EsGrammar

./: .gitignore  README.md  app.py  pyproject.toml  pyvenv.cfg  setup.py  test.py
es_grammar/: __init__.py  category.py  consonant_groups.json  grammar.py  syllable.py  utils.py
esgrammar/: __init__.py  grammar.py  syllable.py  utils.py  word.py
tests/: syllable_test.py  test_word.py  words.json
